serch box functionality added.

--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
           <h1>Phone Inspector</h1>
           <p>Find and hunt the necessary information about latest phone</p>
         </div>
+
         <!-- Phone Search -->
         <div class="row">
           <form class="col search-form">
@@ -29,7 +30,7 @@
               <div class="form-floating w-50">
                 <input
                   type="email"
-                  class="form-control"
+                  class="form-control phone-search-input"
                   id="floatingInputGrid"
                   placeholder="iphone.."
                 />
@@ -59,7 +60,7 @@
     </main>
 
     <!-- Footer -->
-    <footer class="p-3 bg-light">
+    <footer class="p-3 bg-light text-center">
       &copy;
       <a href="https://linkedin.com/m-hasan-ru" target="_blank">Mahmud</a>, 2022
       | All rights reserved
