--- a/index.html
+++ b/index.html
@@ -56,13 +56,11 @@
       <!-- Show phone details -->
       <div class="col phone-details"></div>
 
-      <div class="row row-cols row-cols-md-3 g-2 phones-display">
-        <div class="col phone"></div>
-      </div>
+      <div class="row row-cols row-cols-md-3 g-4 phones-display"></div>
     </main>
 
     <!-- Footer -->
-    <footer class="p-3 bg-light text-center">
+    <footer class="p-3 mt-4 bg-light text-center">
       &copy;
       <a href="https://linkedin.com/m-hasan-ru" target="_blank">Mahmud</a>, 2022
       | All rights reserved
