phone detials added.

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
     <!-- 2. Main - display of phones -->
     <main class="container">
       <!-- Show phone details -->
-      <div class="col phone-details"></div>
+      <div class="row row-cols row-cols-md-3 phone-details"></div>
 
       <div class="row row-cols row-cols-md-3 g-4 phones-display"></div>
     </main>
