--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <!-- Phone Search -->
         <div class="row">
           <form class="col search-form">
-            <div class="input-group justify-content-center">
+            <div class="input-group my-4 justify-content-center">
               <div class="form-floating w-50">
                 <input
                   type="text"
