Project finished. only test spinner are lefted

--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
       integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
       crossorigin="anonymous"
     />
+    <!-- Custom Style -->
+    <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
     <header class="container-fluid">
@@ -51,11 +53,11 @@
       </div>
     </header>
 
-    <!-- 2. Main - display of phones -->
     <main class="container">
       <!-- Show phone details -->
       <div class="row row-cols row-cols-md-3 phone-details"></div>
 
+      <!-- 2. Main - display of phones -->
       <div class="row row-cols row-cols-md-3 g-4 phones-display"></div>
     </main>
 
